unpackaged/main/default/objects/GT_Meeting_Planning__c/GT_Meeting_Planning__c.object-meta.xml
<CustomObject>
    <description>This object is for NNI Customers to track the details around having GES do their meeting planning</description>
    <label>Meeting Planning</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Meeting Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>