unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jennifer Spencer</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 1</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 2</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 3</fullName>
            </value>
            <value>
                <fullName>Debbie Boncek</fullName>
                <label>Boncek, Debbie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>