unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/GES_Account_Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive_Email__c</fullName>
    <formula>IF((TEXT(GES_Account_Executive__c) == &quot;John Boy&quot;),&quot;jboy@ges.com&quot;, 
IF((TEXT(GES_Account_Executive__c) == &quot;Jennifer Spencer&quot;),&quot;Jspencer@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Debbie Boncek&quot;),&quot;DBoncek@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Lori Chester&quot;),&quot;lchester@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Steve Maurer&quot;),&quot;smaurer@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Heather Rosenow&quot;),&quot;HRosenow@ges.com&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AE Email</label>
    <type>Text</type>
</CustomField>