unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allyson Wagner</fullName>
            </value>
            <value>
                <fullName>Lisa Beyer</fullName>
                <label>Beyer, Lisa</label>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Eppelman, Jill</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 3</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Kevin Jones</fullName>
            </value>
            <value>
                <fullName>Lauren Gallagher</fullName>
            </value>
            <value>
                <fullName>Mary Jones</fullName>
            </value>
            <value>
                <fullName>Mary O’Connell</fullName>
            </value>
            <value>
                <fullName>Mathews, Alita</fullName>
            </value>
            <value>
                <fullName>Melinda Peterson</fullName>
            </value>
            <value>
                <fullName>Morris, Dana</fullName>
            </value>
            <value>
                <fullName>Lauren Poole</fullName>
                <label>Poole, Lauren</label>
            </value>
            <value>
                <fullName>Rogers, Kayla</fullName>
            </value>
            <value>
                <fullName>Kimrlee Shamey-Golonka</fullName>
                <label>Shamey-Golonka, Kimrlee</label>
            </value>
            <value>
                <fullName>Shulman, Amanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>