unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/GES_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager_Email__c</fullName>
    <formula>IF((TEXT(GES_Account_Manager__c) == &quot;Jessica Bodner&quot;),&quot;jbodner@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Stephanie Specht&quot;),&quot;sspecht@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Jamie Brosmore&quot;),&quot;jbrosmore@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Jill Johnson&quot;),&quot;jjohnson@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Kevin Jones&quot;),&quot;kjones@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Melinda Peterson&quot;),&quot;mpeterson@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Mary Jones&quot;),&quot;mjones@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Lisa Beyer&quot;),&quot;LBeyer@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Lauren Gallagher&quot;),&quot;lgallagher@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Lauren Poole&quot;),&quot;lpoole@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Kimrlee Shamey-Golonka&quot;),&quot;KShamey-Golonka@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Allyson Wagner&quot;),&quot;AWagner@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Angelina Palermo&quot;),&quot;Apalermo@GES.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Megan Sien&quot;),&quot;msien@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Daphne Saavedra&quot;),&quot;dsaavedra@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Linda Holland&quot;),&quot;LHolland@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Jill Eppelman&quot;),&quot;jeppelman@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Alita Mathews&quot;),&quot;amathews@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Amanda Shulman&quot;),&quot;AShulman@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Kayla Rogers&quot;),&quot;krogers@ges.com&quot;, 
&quot; &quot;))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AM Email</label>
    <type>Text</type>
</CustomField>