unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/GES_Project_Manager_Email_Auto__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager_Email_Auto__c</fullName>
    <formula>IF((TEXT(GES_Project_Manager__c) == &quot;Mike Porter&quot;),&quot;MPorter@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Sarah Montagne&quot;),&quot;smontagne@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Nick Ward&quot;),&quot;NWard@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Chris Wright&quot;),&quot;cwright@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Camille Da silva&quot;),&quot;cdasilva@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Antonio Ferraro&quot;),&quot;aferraro@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Alexa Kelly&quot;),&quot;alexak@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Heather Medus&quot;),&quot;hmedus@ges.com&quot;, 
IF((TEXT(GES_Project_Manager__c) == &quot;Ana Wainman&quot;),&quot;awainman@ges.com&quot;, 
&quot;&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES Project Manager Email</label>
    <type>Text</type>
</CustomField>