unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/Meeting_Planning_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Planning_Name__c</fullName>
    <label>Meeting Planning Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>