unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/Meeting_Planning_Services__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Planning_Services__c</fullName>
    <label>Meeting Planning Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sleeping Rooms</fullName>
            </value>
            <value>
                <fullName>Congress Registration</fullName>
            </value>
            <value>
                <fullName>Dinner Reservations</fullName>
            </value>
            <value>
                <fullName>VIP Car Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>