unpackaged/main/default/objects/GT_Meeting_Planning__c/fields/Meeting_Planning_Services_With_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Planning_Services_With_Spaces__c</fullName>
    <formula>IF(ISBLANK(Meeting_Planning_Services__c), NULL, 
SUBSTITUTE( 
IF(INCLUDES(Meeting_Planning_Services__c, &#39;Sleeping Rooms&#39;),  &#39;Sleeping Rooms, &#39;,  NULL) +
IF(INCLUDES(Meeting_Planning_Services__c, &#39;Congress Registration&#39;), &#39;Congress Registration, &#39;, NULL) +
IF(INCLUDES(Meeting_Planning_Services__c, &#39;Dinner Reservations&#39;),  &#39;Dinner Reservations, &#39;,  NULL) +
IF(INCLUDES(Meeting_Planning_Services__c, &#39;VIP Car Service&#39;),  &#39;VIP Car Service, &#39;,  NULL) + 
&quot;.&quot;, &quot;, .&quot;, &quot; &quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Planning Services</label>
    <type>Text</type>
</CustomField>