unpackaged/main/default/objects/GT_Meeting_Planning__c/recordTypes/Meeting_Planning_Merck.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Planning_Merck</fullName>
    <active>true</active>
    <label>Meeting Planning Merck</label>
</RecordType>