unpackaged/main/default/objects/GT_Meeting_Planning__c/recordTypes/Meeting_Planning_NNI.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Planning_NNI</fullName>
    <active>true</active>
    <description>Meeting Planning for NNI client</description>
    <label>Meeting Planning NNI</label>
</RecordType>