unpackaged/main/default/objects/GT_Meeting_Planning__c/recordTypes/Meeting_Planning_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Planning_Pharma</fullName>
    <active>true</active>
    <label>Meeting Planning Pharma</label>
</RecordType>