unpackaged/main/default/objects/GT_Meeting_Planning__c/validationRules/Cancellation_Date_Field_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Field_is_Required</fullName>
    <active>true</active>
    <description>Please enter the Cancellation date if cancelled.</description>
    <errorConditionFormula>AND(( Cancelled__c ),
ISBLANK( Cancellation_Date__c))</errorConditionFormula>
    <errorDisplayField>Cancellation_Date__c</errorDisplayField>
    <errorMessage>Please enter the Cancellation date.</errorMessage>
</ValidationRule>